# cmir

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
cmir/: __init__.py
cmir/metrics/: __init__.py  bcmi.py  ecmi.py  ecmi_old.py  patch_cca.py  patch_emi.py
cmir/metrics/tests/: test_bnmi.py  test_local_cca.py  test_patch_cca.py
cmir/optimizers/: __init__.py  cmaes.py  progessbar.py
cmir/pipelines/: __init__.py  search_2D_dense.py  search_patch_emi.py
cmir/transforms/: __init__.py  clahe.py  levels.py
cmir/transforms/homography/: __init__.py  homography_basis.py
cmir/transforms/homography/tests/: test_homography_linear_combination.py
cmir/transforms/splines/: jit_utils.py
cmir/transforms/tests/: test_levels.py
cmir/warps/: __init__.py  apply_homography.py  lie_homography_basis.py  lie_homography_exp.py
cmir/warps/homography/: homography_lie.py
cmir/warps/homography/tests/: test_homography_lie.py  test_homography_linear_combination.py
cmir/warps/splines/: __init__.py  api.py  bspline.py  pushpull.py  splines.py
cmir/warps/splines/tests/: test_gradcheck_pushpull.py  test_spline.py
