[tool.poetry]
name = "cmir"
version = "0.1.0"
description = ""
authors = ["ZacharyVarley <zvarley@andrew.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
torch = "^2.0"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
